# Map-Shortest-Path-Visualization-System

./: .gitignore  CMakeLists.txt  CODE_REVIEW_REPORT.md  LICENSE  README.md
.github/workflows/: cmake.yml
Map-Shortest-Path-Visualization-System/: CMakeLists.txt  LICENSE  README.md
Map-Shortest-Path-Visualization-System/data/: edges.csv  map.txt  maps.csv  nodes.csv  places.csv
Map-Shortest-Path-Visualization-System/data/curved/: README.md  campus_graph_curved.json  check_connectivity.py  edge_geometry_points.csv  edges_curved.csv  nodes.csv  pois.csv  rebuild_map_data.py  validate_map_data.ps1
Map-Shortest-Path-Visualization-System/demo/: demo-script.md
Map-Shortest-Path-Visualization-System/demo/demo-data/: edges.csv  nodes.csv
Map-Shortest-Path-Visualization-System/docs/: TESTING.md
Map-Shortest-Path-Visualization-System/docs/01-项目立项与分工/: 团队角色分工表.md  项目理解与开发计划.md
Map-Shortest-Path-Visualization-System/docs/02-可行性分析/: 可行性分析报告.md
Map-Shortest-Path-Visualization-System/docs/03-需求分析/: README.md  功能清单.md
Map-Shortest-Path-Visualization-System/docs/04-总体设计/: README.md  项目设计与素材.md
Map-Shortest-Path-Visualization-System/docs/05-详细设计/: README.md  异常绕路问题修复方案.md
Map-Shortest-Path-Visualization-System/docs/06-原型与UI/: README.md
Map-Shortest-Path-Visualization-System/docs/07-测试用例与报告/: README.md
Map-Shortest-Path-Visualization-System/docs/08-用户手册/: README.md
Map-Shortest-Path-Visualization-System/docs/09-项目总结/: README.md
Map-Shortest-Path-Visualization-System/docs/10-答辩材料/: README.md
Map-Shortest-Path-Visualization-System/include/: astar.h  common.h  dijkstra.h  graph.h  input.h  map_transform.h  models.h  path_result.h  renderer3d.h  renderer_phase1.h  road_editor.h  storage.h  ui_text.h  visualization.h
Map-Shortest-Path-Visualization-System/src/: astar.c  dijkstra.c  graph.c  input.c  main.c  path_result.c  renderer3d.c  storage.c  ui_text.c  visualization.c
Map-Shortest-Path-Visualization-System/tests/: test_astar.c  test_curved_campus.c  test_dijkstra.c  test_edge_cases.c  test_graph.c  test_input.c  test_path_result.c  test_road_editor.c  test_scu_map.c  test_storage.c
Map-Shortest-Path-Visualization-System/tests/test_data/: broken_map.txt  edges.csv  map.txt  nodes.csv  places.csv
data/: edges.csv  map.txt  maps.csv  nodes.csv  places.csv
data/curved/: README.md  campus_graph_curved.json  check_connectivity.py  edge_geometry_points.csv  edges_curved.csv  nodes.csv  pois.csv  validate_map_data.ps1
data/new_jiang_an/: edge_geometry_points.csv  edges_curved.csv  nodes.csv
demo/: demo-script.md
demo/demo-data/: edges.csv  nodes.csv
docs/: TESTING.md  四川大学江安校区新地图数据方案.md
docs/01-项目立项与分工/: 团队角色分工表.md  项目理解与开发计划.md
docs/02-可行性分析/: 可行性分析报告.md
docs/03-需求分析/: 2026-7-7 摆烂了对不队 地图最短路径可视化系统产品需求说明书.docx  2026-7-7 摆烂了对不队 地图最短路径可视化系统需求文档.xlsx  README.md  功能清单.md
docs/04-总体设计/: README.md  地图最短路径可视化系统-架构设计.docx  项目设计与素材.md
docs/05-详细设计/: 2026年7月9日-摆烂了对不队-地图可视化系统详细设计文档.docx  README.md  地图最短路径可视化系统-架构设计.docx
docs/06-原型与UI/: README.md
docs/07-测试用例与报告/: README.md  地图最短路径可视化系统-测试方案.docx  地图最短路径可视化系统-测试用例.xlsx
docs/08-用户手册/: README.md
docs/09-项目总结/: README.md
docs/10-答辩材料/: README.md
include/: astar.h  common.h  dijkstra.h  graph.h  input.h  models.h  path_result.h  renderer3d.h  storage.h  ui_text.h  visualization.h
src/: astar.c  dijkstra.c  graph.c  input.c  main.c  map_transform.c  path_result.c  renderer3d.c  renderer_phase1.c  road_editor.c  storage.c  ui_text.c  visualization.c
tests/: test_astar.c  test_curved_campus.c  test_dijkstra.c  test_edge_cases.c  test_graph.c  test_input.c  test_path_result.c  test_scu_map.c  test_storage.c
tests/test_data/: broken_map.txt  edges.csv  map.txt  nodes.csv  places.csv
